2003-07-31  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (mail_format_raw_message): Updated to pass FALSE
	as the 'decode' param to
	mail_format_data_wrapper_write_to_stream().
	(mail_format_data_wrapper_write_to_stream): Now takes a boolean
	arg telling whether to decode or not. Also reworked the charset
	logic now that camel doesn't handle this for us any longer.
	(mail_format_get_data_wrapper_text): Updated.
	(handle_text_plain): Same.
	(handle_text_enriched): Here too.

	* mail-display.c (do_attachment_header): Call decode_to_stream
	here instead of write_to_stream.
	(do_external_viewer): Same.
	(on_url_requested): Same. Also updated for
	mail_format_data_wrapper_write_to_stream().
	(try_part_urls): Call decode_to_stream.
	(drag_data_get_cb): Same.

2003-07-23  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (mail_format_data_wrapper_write_to_stream): Revert
	prior changes.

2003-07-23  Dan Winship  <danw@ximian.com>

	* folder-browser.c (message_list_drag_data_get): Fix type warnings
	(folder_browser_toggle_caret_mode): Remove unused variable.

	* folder-browser-ui.c (basename): remove unused function

	* mail-account-gui.c (mail_account_gui_build_extra_conf): Fix
	warnings

	* mail-callbacks.c (empty_trash): Remove unused variable.

	* mail-display.c: #include gal/widgets/e-gui-utils.h for
	e_auto_kill_popup_menu_on_selection_done

	* mail-importer.c: #include e-util/e-path.h for e_path_to_physical

	* mail-session.c (main_play_sound): don't declare filename to be
	const and then free it.

	* mail-vfolder.c (vfolder_edit_rule, vfolder_gui_add_rule): Fix
	casts

	* message-list.c (build_flat_diff): Fix a typo in the
	non-BROKEN_ETREE code

2003-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (handle_multipart_encrypted): We don't have
	camel_pgp_mime_is_rfc2015_encrypted() anymore so just look at the
	protocol for now.
	(mail_format_data_wrapper_write_to_stream): Updated for the new
	way camel handles content objects.
