@@ -1,3 +1,15 @@
+2003-08-05  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* mail-format.c (handle_multipart_encrypted): Updated for
+	CamelMimePart::content_type changes.
+
+	* mail-ops.c (save_part_save): Use
+	camel_data_wrapper_decode_to_stream() here.
+
+	* mail-display.c (drag_data_get_cb): Updated for
+	CamelMimePart::content_type changes.
+	(do_attachment_header): Same.
+
 2003-07-31  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* mail-format.c (mail_format_raw_message): Updated to pass FALSE
